--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
   </div>
   <button type="button" class="btn btn-success knop1">DDoS Da Skid</button>
-<a href="gta5.apk " download>
+<a href="bot.apk " download>
 
   <button type="button" class="btn btn-success knop2">Download Bots</button>
 </a>
